// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popover empty 1`] = `
<div
  class="content"
>
  content
</div>
`;

exports[`Popover popover align 1`] = `
<div
  class="content"
>
  content
</div>
`;

exports[`Popover popover align 2`] = `
<div
  class="content"
  style=""
>
  content
  <div
    style="position: absolute; top: 0px; left: 0px; width: 100%;"
  >
    <div>
      <div
        class="uc-fe-popover style__PopoverWrap-cfqvNq iMAKfT uc-fe-popover-placement-bottomLeft uc-fe-popover-animation-fade-appear"
        style="left: -999px; top: -994px;"
      >
        <div>
          popup
        </div>
      </div>
    </div>
  </div>
</div>
`;
